--- a/HTTP4Hybrid/Xout-ExpectedKongResource/KongService.yaml
+++ b/HTTP4Hybrid/Xout-ExpectedKongResource/KongService.yaml
@@ -9,5 +9,5 @@ spec:
   controlPlaneRef:
     type: konnectNamespacedRef
     konnectNamespacedRef:
-      name: cp-konnect
+      name: cp-zonkey
 
