--- a/HTTP4Hybrid/Xout-ExpectedKongResource/KongTargets.yaml
+++ b/HTTP4Hybrid/Xout-ExpectedKongResource/KongTargets.yaml
@@ -1,19 +1,30 @@
 kind: KongTarget
 apiVersion: configuration.konghq.com/v1alpha1
 metadata:
-  name: target-quote-rule1-svc1.1
+  name: httproute.default.httproute-quote.0.0.0
+  ownerReferences:
+    - apiVersion: gateway.networking.k8s.io/v1
+      blockOwnerDeletion: true
+      kind: HTTPRoute
+      name: httproute-quote
 spec:
-  upstreamRef:
-    name: upstream-quote-rule1
   target: quotaday.default.svc.cluster.local:8080
-  weight: 1
+  upstreamRef:
+    name: httproute.default.httproute-quote.0.0
+  weight: 2
 ---
 kind: KongTarget
 apiVersion: configuration.konghq.com/v1alpha1
 metadata:
-  name: target-quote-rule1-svc1.2
+  name: httproute.default.httproute-quote.0.0.1
+  ownerReferences:
+    - apiVersion: gateway.networking.k8s.io/v1
+      blockOwnerDeletion: true
+      kind: HTTPRoute
+      name: httproute-quote
 spec:
-  upstreamRef:
-    name: upstream-quote-rule1
   target: quotaday2.default.svc.cluster.local:8088
-  weight: 2  
+  upstreamRef:
+    name: httproute.default.httproute-quote.0.0
+  weight: 4
+
