--- a/HTTP4Hybrid/02-Gateway.yaml
+++ b/HTTP4Hybrid/02-Gateway.yaml
@@ -8,6 +8,7 @@ spec:
   - name: http
     protocol: HTTP
     port: 80
+#   hostname: *.sslip.io
 ---
 kind: GatewayClass
 apiVersion: gateway.networking.k8s.io/v1
