Update samples to match new way to create ControlPlanes
ControlPlanes are automatically created and the GatewayConfiguration is
now referencing directly the KonnectApiAuth resource.
This commit updates the resources accordingly.

Moreover, the HTTPRoute and backend services have been updated to
showcase the support to a couple of HTTPRoute filters.

Signed-off-by: Francesco Giudici <francesco.giudici@konghq.com>

--- a/HTTP4Hybrid/Backends.yaml
+++ b/HTTP4Hybrid/Backends.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: echo
           image: quay.io/fgiudici/echo:v0.4.1
-          args: ["-H", "X-Deployment:echo", "-H", "X-Reply:from-backend"]
+          args: ["-H", "X-Deployment:echo"]
           ports:
             - containerPort: 80
 ---
