--- a/HTTP4Hybrid/02-Gateway.yaml
+++ b/HTTP4Hybrid/02-Gateway.yaml
@@ -1,19 +1,24 @@
-kind: Gateway
-apiVersion: gateway.networking.k8s.io/v1
+kind: GatewayConfiguration
+apiVersion: gateway-operator.konghq.com/v2beta1
 metadata:
-  name: kong-zonkey01
+  name: konnect-zonkey
+  namespace: default
 spec:
-  gatewayClassName: kong-zonkey
-  listeners:
-  - name: http
-    protocol: HTTP
-    port: 80
-#   hostname: *.sslip.io
+  konnect:
+    authRef:
+      name: konnect-api-auth
+  dataPlaneOptions:
+    deployment:
+      podTemplateSpec:
+        spec:
+          containers:
+          - name: proxy
+            image: kong/kong-gateway:3.12
 ---
 kind: GatewayClass
 apiVersion: gateway.networking.k8s.io/v1
 metadata:
-  name: kong-zonkey
+  name: kong-hybrid
 spec:
   controllerName: konghq.com/gateway-operator
   parametersRef:
@@ -22,27 +27,14 @@ spec:
     name: konnect-zonkey
     namespace: default
 ---
-kind: GatewayConfiguration
-apiVersion: gateway-operator.konghq.com/v2beta1
+kind: Gateway
+apiVersion: gateway.networking.k8s.io/v1
 metadata:
-  name: konnect-zonkey
-  namespace: default
+  name: kong-zonkey01
 spec:
-  extensions:
-  - name: konnect-zonkey
-    kind: KonnectExtension
-    group: konnect.konghq.com
-    namespace: default
----
-kind: KonnectExtension
-apiVersion: konnect.konghq.com/v1alpha2
-metadata:
- name: konnect-zonkey
-spec:
-  konnect:
-   controlPlane:
-     ref:
-       type: konnectNamespacedRef
-       konnectNamespacedRef:
-         name: cp-zonkey
-
+  gatewayClassName: kong-hybrid
+  listeners:
+  - name: http
+    protocol: HTTP
+    port: 80
+#   hostname: *.sslip.io
